update "i18n 日本語化対応"

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @user[:name] %></h1>
 <p><%= @user[:username] %></p>
 <ul>
-  <li>Location : <%= @user[:location] %></li>
-  <li>About    : <%= @user[:about] %></li>
+  <li><%= t('locale') %> : <%= I18n.locale %></li>
+  <li><%= t('activerecord.attributes.user.location') %> : <%= @user[:location] %></li>
+  <li><%= t('activerecord.attributes.user.about') %> : <%= @user[:about] %></li>
 </ul>
