--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,70 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
  *= require_tree .
  *= require_self
  */
+
+/** * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/) * http://cssreset.com */
+html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {	margin: 0;	padding: 0;	border: 0;	font-size: 100%;	font: inherit;	vertical-align: baseline;}/* HTML5 display-role reset for older browsers */article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {	display: block;}body {	line-height: 1;}ol, ul {	list-style: none;}blockquote, q {	quotes: none;}blockquote:before, blockquote:after,q:before, q:after {	content: '';	content: none;}table {	border-collapse: collapse;	border-spacing: 0;}
+
+@charset 'UTF-8';
+
+body {
+  color: #444;
+  background-color: #aaa;
+}
+
+.container {
+  width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #F4F5F7;
+  box-shadow: rgba(0, 0, 0, .4) 0 0 8px;
+  overflow: hidden;
+}
+
+.header {
+  background-color: #999;
+  color: #444;
+}
+.header__title {
+  font-size: 42px;
+  font-weight: bold;
+  line-height: 1.4;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  text-shadow: rgba(255, 255, 255, .4) 0 1px 0;
+}
+
+.global-nav{
+  background-color: #ccc;
+  box-shadow: rgba(0, 0, 0, .4) 0 1px 1px;
+  position: relative;
+}
+.global-nav__items {
+  display: flex;
+}
+.global-nav__item {
+  display: block;
+  flex: 0 0 20%;
+}
+.global-nav__link {
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 64px;
+  text-align: center;
+  color: #444;
+  text-shadow: rgba(255, 255, 255, .6) 0 1px 0;
+  background: linear-gradient(to bottom, #ddd 0%, #ccc 100%);
+}
+.global-nav__link:hover,
+.global-nav__item:nth-child(even) .global-nav__link:hover {
+  background-color: #eee;
+}
+.global-nav__item:nth-child(even) .global-nav__link {
+  background-color: #bbb;
+  background: linear-gradient(to bottom, #bbb 0%, #aaa 100%);
+}
+
