--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
             <li class="global-nav__item">
               <%= link_to 'Login', new_user_session_path, class: 'global-nav__link' %>
             </li>
+            <li class="global-nav__item">
+              <%= link_to 'Sign in with Twitter', user_twitter_omniauth_authorize_path, class: 'global-nav__link' %>
+            </li>
           <% end %>
         </ul>
       </nav>
